tests/diagnostics/catalog/snapshots/ir/IR0065.snap
error[IR0065]: IR_E_UNSUPPORTED_TARGET
 --> tests/diagnostics/catalog/sources/ir/IR0065.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0065
  = help: keep IR validation diagnostics structured and catalog-backed
